--- a/positionstyles.css
+++ b/positionstyles.css
@@ -33,140 +33,214 @@
 /* Activity 2 styles */ 
 .content2 {
   /* This is the parent of the activity 2 boxes. */
+  width: 100%;
+  height: 800px;
   display: grid;
-  grid-template-columns: 20px 20px 20px 20px 20px 20px;
-  grid-template-rows: 20px 20px 20px 20px 20px 20px;
-  
+  grid-template-rows: repeat(6, 30px);
+  grid-template-columns: repeat(6, 30px);
 }
 .red2 {
-  width: 100px; 
-  height: 100px; 
+  width: 150px; 
+  height: 150px; 
   background-color: red; 
-  grid-row: 1
-  grid-column: 1;
+  grid-column: 1 / 6;
+  grid-row: 1 / 6;
 
 } 
 .green2 { 
-  width: 100px; 
-  height: 100px; 
+  width: 150px; 
+  height: 150px; 
   background-color: green; 
-  grid-row: 3;
-  grid-column: 3;
+  grid-column: 3 / 9;
+  grid-row: 3 / 9;
   
 } 
-/* .yellow2 {
-  width: 100px; 
-  height: 100px; 
+.yellow2 {
+  width: 150px; 
+  height: 150px; 
   background-color: gold; 
-  grid-row: 3;
-  grid-column: 3;
+  grid-column: 5 / 9;
+  grid-row: 5 / 9;
+
 } 
 .blue2 {
-  width: 100px; 
-  height: 100px; 
+  width: 150px; 
+  height: 150px; 
   background-color: blue; 
-  grid-row: 4;
-  grid-column: 4;
-}  */
+  grid-column: 7 / 9;
+  grid-row: 7 / 9;
+
+
+} 
 /* Activity 3 styles */ 
 .content3 {
   /* This is the parent of the activity 3 boxes. */
+  height: 400px;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(9, 1fr);
+  padding: 5px;
 }
 .red3 {
-  width: 100px; 
-  height: 100px; 
+  /* width: 100px; 
+  height: 100px;  */
   background-color: red; 
+  grid-column-start: 1;
+  grid-column-end: -1;
+  grid-row-start: 1;
+  grid-row-end: 2;
 } 
 .green3 {
-  width: 100px; 
-  height: 100px; 
+  /* width: 100px; 
+  height: 100px;  */
   background-color: green;
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 2;
+  grid-row-end: 4;
 } 
 .yellow3 {
-  width: 100px; 
-  height: 100px; 
+  /* width: 100px; 
+  height: 100px;  */
   background-color: gold; 
+  grid-column-start: 6;
+  grid-column-end: -1;
+  grid-row-start: 2;
+  grid-row-end: 4;
 } 
 .blue3 {
-  width: 100px;
-  height: 100px; 
+  /* width: 100px;
+  height: 100px;  */
   background-color: blue; 
+  grid-column-start: 1;
+  grid-column-end: -1;
+  grid-row-start: 4;
+  grid-row-end: 5;
 } 
 /* Activity 4 styles */ 
 .content4 {
   /* This is the parent of the activity 4 boxes. */
   height: 400px;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  padding: 5px;
 }
 .red4 {
-  width: 100px; 
-  height: 100px; 
+  /* width: 100px; 
+  height: 100px;  */
   background-color: red; 
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: -1;
 } 
 .green4 {
-  width: 100px; 
-  height: 100px; 
+  /* width: 100px; 
+  height: 100px;  */
   background-color: green; 
+  grid-row: 1;
 } 
 .yellow4 {
-  width: 100px; 
-  height: 100px; 
+  /* width: 100px; 
+  height: 100px;  */
   background-color: gold; 
+  grid-row: 2;
 } 
 .blue4 {
-  width: 100px; 
-  height: 100px; 
+  /* width: 100px; 
+  height: 100px;  */
   background-color: blue; 
+  grid-row:3;
 } 
 /* Activity 5 styles */ 
 .content5 {
   /* This is the parent of the activity 5 boxes. */
   height: 400px;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(6, 1fr);
+  padding: 5px;
+
 }
 .red5 { 
-  width: 100px; 
-  height: 100px; 
+  /* width: 100px; 
+  height: 100px;  */
   background-color: red; 
+  grid-column-start: 1;
+  grid-column-end: -1;
+  grid-row-start: 1;
+  grid-row-end: 2;
 } 
 .green5 { 
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 200px; 
   background-color: green; 
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 4;
+  z-index: 2;
 
 } 
 .yellow5 {
-  width: 100px; 
-  height: 100px; 
   background-color: gold; 
+  grid-column-start: 1;
+  grid-column-end: -1;
+  grid-row-start: 2;
+  grid-row-end: 5;
+  z-index: 1;
 
 } 
 .blue5 {
-  width: 100px; 
   height: 100px; 
   background-color: blue; 
+  grid-column-start: 1;
+  grid-column-end: -1;
+  grid-row-start: 5;
+  grid-row-end: 6;
 } 
 /* Activity 6 styles */ 
 .content6 {
   /* This is the parent of the activity 6 boxes. */
+  height: 500px;
+  width: 500px;
+  display: grid;
+  grid-template-rows: repeat(6, 1fr);
+  grid-template-columns: repeat(6, 1fr);
 }
 .red6 {
-  width: 100px; 
-  height: 100px; 
   background-color: red; 
+  background-color: red; 
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  z-index: 1;
 } 
-.green6 {
-  width: 100px; 
-  height: 100px; 
+.green6 { 
   background-color: green; 
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 5;
+  grid-row-end: 7;
+  z-index: 3;
 } 
 .yellow6 {
-  width: 100px; 
-  height: 100px; 
   background-color: gold; 
+  grid-column-start: 45
+  grid-column-end: 6;
+  grid-row-start: 3;
+  grid-row-end: -1;
+  z-index: 4;
 } 
 .blue6 {
-  width: 100px; 
-  height: 100px; 
   background-color: blue; 
+  grid-column-start: 2;
+  grid-column-end: 6;
+  grid-row-start: 2;
+  grid-row-end: 6;
+  z-index: 2;
 } 
 
 
